# structree

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/structree/: __init__.py  _config.py  _flatten_util.py  _registry.py  _struct.py  _tree_util.py  _typing.py
tests/: test_config.py  test_ravel.py  test_struct.py  test_structree.py  test_tree.py
